@@ -1,5 +1,6 @@
 2013-04-27  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Let build output be linked in a new browser window
 	* [!!!][TASK] Use namespaces
 
 2013-04-27  Xavier Perseguers  <xavier@causal.ch>
